--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
@@ -1,17 +1,73 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Catalogue MARC Detail</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script language="JavaScript" type="text/javascript">
+function active(numlayer){
+    for (i=0; i <= 10 ; i++ ) {
+        var tab = document.getElementById(i+'XX');
+        if (numlayer==i) {
+            tab.setAttribute("class","content_visible");
+            var tabactive=document.getElementById('link'+i);
+            tabactive.removeAttribute("class");
+            tabactive.setAttribute("class","tab_active");
+        } else {
+            tab.setAttribute("class","content_hidden");
+            try {
+                var tabactive=document.getElementById('link'+i);
+                tabactive.removeAttribute("class");
+                tabactive.setAttribute("class","tab_inactive");
+            }
+            catch(e){};
+        }
+    }
+}
+
+function confirm_deletion(count) {
+
+	 var is_confirmed;
+	if (count>0){
+		is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
+	}
+    else{
+		    is_confirmed= confirm('Are you sure you want to delete this biblio? ');
+	}
+
+     if (is_confirmed) {
+        if (count=0){
+			window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+		}
+    }
+}
+
+function Dopop(link) {
+    window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
+}
+
+function Changefwk(FwkList) {
+	var fwk = FwkList.options[FwkList.selectedIndex].value;
+	window.location = "MARCdetail.pl?biblionumber=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
+}
+
+function Addbiblio(op) {
+	var fwk = document.forms['f'].Frameworks.options[document.forms['f'].Frameworks.selectedIndex].value;
+	window.location = "../cataloguing/addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
+}
+
+</script>
 </head>
 <body>
 
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
 
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <!-- TMPL_UNLESS name="popup" -->
-    <h1>
-        MARC biblio : <!-- TMPL_VAR NAME="biblionumber" -->
-    </h1>
+    <h1>MARC biblio : <!-- TMPL_VAR NAME="biblionumber" --></h1>
     
 <!-- TMPL_INCLUDE NAME="action-catalogue.inc" -->
 
@@ -79,6 +135,7 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
             </div> <!-- class='tag' -->
         <!-- /TMPL_LOOP -->
     </div>
@@ -110,6 +167,7 @@
                 </p>
             <!-- /TMPL_LOOP -->
             </div>
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
@@ -139,6 +197,7 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
             </div>
         <!-- /TMPL_LOOP -->
     </div>
@@ -170,6 +229,7 @@
                 </p>
             <!-- /TMPL_LOOP -->
             </div>
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
@@ -199,6 +259,7 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
             </div>
         <!-- /TMPL_LOOP -->
     </div>
@@ -230,6 +291,7 @@
                 </p>
             <!-- /TMPL_LOOP -->
             </div>
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
@@ -259,6 +321,7 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
             </div>
         <!-- /TMPL_LOOP -->
     </div>
@@ -290,6 +353,7 @@
                 </p>
             <!-- /TMPL_LOOP -->
             </div>
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
@@ -319,6 +383,7 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
             </div>
         <!-- /TMPL_LOOP -->
     </div>
@@ -350,15 +415,15 @@
                 </p>
             <!-- /TMPL_LOOP -->
             </div>
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="10XX" class="content_hidden">
-        <br />
-        <table class="noborder">
+        <table>
                 <tr>
                     <!-- TMPL_LOOP NAME="item_header_loop" -->
-                        <th class="noborder">
+                        <th>
                             <!-- TMPL_VAR NAME="header_value" -->
                         </th>
                     <!-- /TMPL_LOOP -->
@@ -370,57 +435,10 @@
                 <!-- /TMPL_LOOP -->
         </table>
     </div>
-<script language="JavaScript" type="text/javascript">
-function active(numlayer){
-    for (i=0; i <= 10 ; i++ ) {
-        var tab = document.getElementById(i+'XX');
-        if (numlayer==i) {
-            tab.setAttribute("class","content_visible");
-            var tabactive=document.getElementById('link'+i);
-            tabactive.removeAttribute("class");
-            tabactive.setAttribute("class","tab_active");
-        } else {
-            tab.setAttribute("class","content_hidden");
-            try {
-                var tabactive=document.getElementById('link'+i);
-                tabactive.removeAttribute("class");
-                tabactive.setAttribute("class","tab_inactive");
-            }
-            catch(e){};
-        }
-    }
-}
 
-function confirm_deletion(count) {
+</div>
+</div>
+</div>
 
-	 var is_confirmed;
-	if (count>0){
-		is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
-	}
-    else{
-		    is_confirmed= confirm('Are you sure you want to delete this biblio? ');
-	}
-
-     if (is_confirmed) {
-        if (count=0){
-			window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
-		}
-    }
-}
-
-function Dopop(link) {
-    window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
-}
-
-function Changefwk(FwkList) {
-	var fwk = FwkList.options[FwkList.selectedIndex].value;
-	window.location = "MARCdetail.pl?biblionumber=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
-}
-
-function Addbiblio(op) {
-	var fwk = document.forms['f'].Frameworks.options[document.forms['f'].Frameworks.selectedIndex].value;
-	window.location = "../cataloguing/addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
-}
-
-</script>
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
