--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/advsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/advsearch.tmpl
@@ -1,13 +1,34 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Catalogue &rsaquo; Advanced Search</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/JavaScript" language="JavaScript">
+	document.getElementById('search_box').focus(); // auto focus on the search input.
+	
+	/**
+	 *  Function add_field();
+	 *  This function allows to display a new field to search.
+	 */
+	function add_field() {
+	    var ButtonPlus = document.getElementById('ButtonPlus');
+	    var line       = ButtonPlus.parentNode;
+	    var dad        = line.parentNode;
+	    dad.appendChild(line.cloneNode(true));
+	    line.removeChild(ButtonPlus);
+	}
+</script>
 </head>
 <body>
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
 
+
+<div id="doc" class="yui-t7">
+   <div id="bd">
+	<div class="yui-g">
+
 <form action="search.pl" method="get">
-<div id="main-sidebar"><div id="advanced-search">
+<div id="advanced-search">
 <!-- TMPL_IF NAME="expanded_options" -->
 <h1>Advanced Search</h1>
 <!-- TMPL_ELSE -->
@@ -20,11 +41,9 @@
 
 <fieldset>
         <legend>Select local databases</legend>
-            <p>
                 <!-- TMPL_LOOP NAME="local_servers_loop" -->
                 <input type="checkbox" id="<!-- TMPL_VAR NAME="id" -->" name="<!-- TMPL_VAR NAME="name" -->" <!-- TMPL_IF NAME="checked" -->checked="<!-- TMPL_VAR NAME="checked" -->"<!-- /TMPL_IF --> value="<!-- TMPL_VAR NAME="value" -->" /><label for="<!-- TMPL_VAR NAME="id" -->"><img width="16" height="16" alt="<!-- TMPL_VAR NAME="id" -->" src="<!-- TMPL_VAR NAME="themelang" -->/images/<!-- TMPL_VAR NAME="icon" -->" /> <!-- TMPL_VAR NAME="label" --></label>
                 <!-- /TMPL_LOOP -->
-            </p>
 </fieldset>
 <!-- /DATABASES -->
 <!-- /TMPL_IF -->
@@ -33,11 +52,9 @@
 <!-- REMOTE DATABASES -->
 <fieldset>
     <legend>Select remote databases:</legend>
-        <p>
                 <!-- TMPL_LOOP NAME="outer_servers_loop" -->
                 <input type="checkbox" id="<!-- TMPL_VAR NAME="id" -->" name="<!-- TMPL_VAR NAME="name" -->" <!-- TMPL_IF NAME="checked" -->checked="<!-- TMPL_VAR NAME="checked" -->"<!-- /TMPL_IF --> value="<!-- TMPL_VAR NAME="value" -->" /><label for="<!-- TMPL_VAR NAME="id" -->"><img alt="<!-- TMPL_VAR NAME="id" -->" src="<!-- TMPL_VAR NAME="themelang" -->/images/<!-- TMPL_VAR NAME="icon" -->" /><!-- TMPL_VAR NAME="label" --></label>
                 <!-- /TMPL_LOOP -->
-    </p>
     </fieldset>
 <!-- /REMOTE DATABASES -->
 <!-- /TMPL_IF -->
@@ -53,7 +70,6 @@
                 <p><label for="scan">Scan Indexes</label><input type="checkbox" name="scan" id="scan" value="1" /></p>
             <!-- /TMPL_IF -->
         <!-- /TMPL_IF -->
-            <p>
         <!-- TMPL_IF NAME="expanded_options" -->
             <select name="op">
                 <option value="and" selected="selected">and</option>
@@ -209,7 +225,7 @@
 </fieldset>
 <!--/TMPL_IF -->
 <!--TMPL_IF Name="UNIMARC" -->
-</div></div>
+</div>
 <div id="sidebar">
 <!-- SUBTYPE LIMITS -->
 		<fieldset>
@@ -518,22 +534,9 @@
 </div>
 </form>
 
-<script type="text/JavaScript" language="JavaScript">
 
-document.getElementById('search_box').focus(); // auto focus on the search input.
 
-/**
- *  Function add_field();
- *  This function allows to display a new field to search.
- */
-function add_field() {
-    var ButtonPlus = document.getElementById('ButtonPlus');
-    var line       = ButtonPlus.parentNode;
-    var dad        = line.parentNode;
-    dad.appendChild(line.cloneNode(true));
-    line.removeChild(ButtonPlus);
-}
-
-</script>
+</div>
+</div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
