--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
@@ -1,13 +1,44 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Catalogue Detail</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script language="javascript" type="text/javascript">
+function Dopop(link) {
+    newin=window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
+}
+function confirm_deletion(count) {
+        var is_confirmed;
+	if (count>0){
+		    is_confirmed= alert(_('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio'));
+		    }
+        else{
+		    is_confirmed= confirm(_('Are you sure you want to delete this biblio? '));
+	}
+
+    
+     if (is_confirmed) {
+        if (count>0){
+// 	window.location="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+	}
+	else{
+	window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+	}
+		
+    }
+}
+</script>
 </head>
 <body>
 
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
 
-    <h1><!-- TMPL_VAR NAME="title" --> (<!-- TMPL_VAR NAME="author" -->) <!-- TMPL_VAR NAME="class" --></h1>
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
+    <h1><!-- TMPL_VAR NAME="title" --> <!-- TMPL_IF NAME="author" -->(<!-- TMPL_VAR NAME="author" -->)<!-- /TMPL_IF --> <!-- TMPL_VAR NAME="class" --></h1>
     
 <!-- TMPL_INCLUDE NAME="action-catalogue.inc" -->
     
@@ -134,8 +165,7 @@
                 <tr>
                     <td><!-- TMPL_VAR NAME="description" --></td>
                     <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_VAR name="location" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
-                    <td>
-                        <!-- TMPL_IF name="datedue" -->
+                    <td><!-- TMPL_IF name="datedue" -->
                             On issue to <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></a>
                         <!-- TMPL_ELSE -->
                             <!-- TMPL_IF name="notforloan" -->
@@ -147,15 +177,13 @@
                                 <!-- TMPL_IF NAME="wthdrawn" -->Item Cancelled<!-- TMPL_ELSE -->Available<!-- /TMPL_IF -->
                                 <!-- /TMPL_IF -->
                             <!-- /TMPL_IF -->
-                        <!-- /TMPL_IF -->
-                    </td>
+                        <!-- /TMPL_IF --></td>
                     <td><!-- TMPL_VAR NAME="datedue" --></td>
                     <td><!-- TMPL_VAR NAME="datelastseen" --></td>
-                    <td><a href="/cgi-bin/koha/catalogue/moredetail.pl?type=<!-- TMPL_VAR NAME="type" -->&item=<!-- TMPL_VAR NAME="itemnumber" -->&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->"><!-- TMPL_VAR NAME="barcode" --></a></td>
+                    <td><a href="/cgi-bin/koha/catalogue/moredetail.pl?type=<!-- TMPL_VAR NAME="type" -->&amp;item=<!-- TMPL_VAR NAME="itemnumber" -->&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->"><!-- TMPL_VAR NAME="barcode" --></a></td>
                     <td><!-- TMPL_VAR NAME="volumeddesc" --></td>
                     <!-- TMPL_IF NAME="type" -->
-                        <td>
-                            <a href="/cgi-bin/koha/maint/catmaintain.pl?type=fixitemtype&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->&amp;item=<!-- TMPL_VAR NAME="itemtype" -->">Fix Itemtype</a>
+                        <td>    <a href="/cgi-bin/koha/maint/catmaintain.pl?type=fixitemtype&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->&amp;item=<!-- TMPL_VAR NAME="itemtype" -->">Fix Itemtype</a>
                         </td>
                     <!-- /TMPL_IF -->
                 </tr>
@@ -179,16 +207,12 @@
                     <th>Date</th>
                     <th>Status</th>
                     <th>Note</th>
+				</tr>
             <!--TMPL_LOOP Name="latestserials"-->
                 <tr>
-                    <td>
-                        <!--TMPL_VAR Name="serialseq"-->
-                    </td>
-                    <td>
-                        <!--TMPL_VAR Name="planneddate"-->
-                    </td>
-                    <td>
-                        <!--TMPL_IF Name="status1"-->Waited
+                    <td><!--TMPL_VAR Name="serialseq"--></td>
+                    <td><!--TMPL_VAR Name="planneddate"--></td>
+                    <td><!--TMPL_IF Name="status1"-->Waited
                         <!--TMPL_ELSE -->
                             <!-- TMPL_IF Name="status2"-->Arrived
                             <!--TMPL_ELSE -->
@@ -201,11 +225,8 @@
                                     <!--/TMPL_IF-->
                                 <!--/TMPL_IF-->
                             <!--/TMPL_IF-->
-                        <!--/TMPL_IF-->
-                    </td>
-                    <td>
-                        <!--TMPL_VAR Name="notes"-->
-                    </td>
+                        <!--/TMPL_IF--></td>
+                    <td><!--TMPL_VAR Name="notes"--></td>
                 </tr>
             <!--/TMPL_LOOP -->
             </table>
@@ -214,30 +235,11 @@
 </div>
 <!-- /TMPL_IF -->
 
-<script language="javascript" type="text/javascript">
-function Dopop(link) {
-    newin=window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
-}
-function confirm_deletion(count) {
-        var is_confirmed;
-	if (count>0){
-		    is_confirmed= alert(_('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio'));
-		    }
-        else{
-		    is_confirmed= confirm(_('Are you sure you want to delete this biblio? '));
-	}
 
-    
-     if (is_confirmed) {
-        if (count>0){
-// 	window.location="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
-	}
-	else{
-	window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
-	}
-		
-    }
-}
-</script>
 
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
