--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/dictionary.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/dictionary.tmpl
@@ -4,6 +4,13 @@
 </head>
 <body>
 
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 	<h1>Dictionary Search</h1>
 <form name="f" method="post" action="/cgi-bin/koha/catalogue/dictionary.pl">
 	<input type="hidden" name="op" value="do_search" />
@@ -136,5 +143,9 @@
 	
 <!-- /TMPL_IF -->
 
-</body>
-</html>
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
