--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/suggest.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/suggest.tmpl
@@ -4,6 +4,13 @@
 </head>
 <body>
 
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
         <table>
         <caption>Catalog Search</caption>
             <tr>
@@ -36,5 +43,9 @@
     }
 </script>
 
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+</div>
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
