--- a/koha-tmpl/intranet-tmpl/prog/en/modules/virtualshelves/addbybiblionumber.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/virtualshelves/addbybiblionumber.tmpl
@@ -1,15 +1,15 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Add to Virtual Shelf</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<style type="text/css">
+   #custom-doc { width:38.46em;*width:37.53em;min-width:500px; margin:auto; text-align:left; }
+   </style>
 </head>
 <body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<div id="doc3" class="yui-t2">
-   
+<div id="custom-doc" class="yui-t7">
    <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-g">
 
 
 <h1>Add 
@@ -52,7 +52,5 @@
 
 </div>
 </div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
