--- a/koha-tmpl/intranet-tmpl/prog/en/modules/virtualshelves/shelves.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/virtualshelves/shelves.tmpl
@@ -1,6 +1,44 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Virtual Shelves</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/javascript">
+	function confirmDelete(s){
+		if (window.confirm(s))
+			return true;
+		return false;
+	}
+	/**
+	 * this function checks all checkbox 
+	 * or uncheck all if there are already checked.
+	 */
+	function CheckAll(){
+		var checkboxes = document.getElementsByTagName('input');
+		var nbCheckbox = checkboxes.length;
+		var check = areAllChecked();
+		check = !check;
+		for(var i=0;i<nbCheckbox;i++){
+			if(checkboxes[i].getAttribute('type') == "checkbox" ){
+				checkboxes[i].checked = check;
+			}
+		}
+	}
+	/**
+	 * this function return true if all checkbox are checked
+	 */
+	function areAllChecked(){
+		var checkboxes = document.getElementsByTagName('input');
+		var nbCheckbox = checkboxes.length;
+		for(var i=0;i<nbCheckbox;i++){
+			if(checkboxes[i].getAttribute('type') == "checkbox" ){
+				if(checkboxes[i].checked == 0){
+					return false;
+				}
+			}
+		}
+		return true;
+	}
+	
+</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -69,8 +107,8 @@
         <!-- /TMPL_LOOP -->
     </table>
     <!-- TMPL_ELSE -->
-    <br />
-    <b>This shelf is empty.</b>
+
+    <p><b>This shelf is empty.</b></p>
     <!-- TMPL_UNLESS NAME="itemsloop" -->
         <input type="hidden" name="DEL-<!-- TMPL_VAR NAME="shelfnumber" -->" />
         <input type="hidden" name="shelves" value="1" />
@@ -92,7 +130,6 @@
 </form>
     <!-- TMPL_IF name="manageshelf" -->
     
-<br />
 <form action="/cgi-bin/koha/virtualshelves/shelves.pl" method="post">
     <table>
         <tr><th colspan="2">Add an item to this shelf by barcode</th></tr>
@@ -165,7 +202,7 @@
         <input type="submit" value="Delete shelves" /></form>
         <!-- /TMPL_IF -->
         <!-- /TMPL_IF -->
-        <br />
+
         <p><form class="inline" action="/cgi-bin/koha/virtualshelves/shelves.pl" method="get"><input type="submit" value="Back to virtual shelves" /></form></p>
 
     <!-- TMPL_ELSE -->
@@ -231,42 +268,3 @@
 
 <!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
-
-<script type="text/javascript">
-	function confirmDelete(s){
-		if (window.confirm(s))
-			return true;
-		return false;
-	}
-	/**
-	 * this function checks all checkbox 
-	 * or uncheck all if there are already checked.
-	 */
-	function CheckAll(){
-		var checkboxes = document.getElementsByTagName('input');
-		var nbCheckbox = checkboxes.length;
-		var check = areAllChecked();
-		check = !check;
-		for(var i=0;i<nbCheckbox;i++){
-			if(checkboxes[i].getAttribute('type') == "checkbox" ){
-				checkboxes[i].checked = check;
-			}
-		}
-	}
-	/**
-	 * this function return true if all checkbox are checked
-	 */
-	function areAllChecked(){
-		var checkboxes = document.getElementsByTagName('input');
-		var nbCheckbox = checkboxes.length;
-		for(var i=0;i<nbCheckbox;i++){
-			if(checkboxes[i].getAttribute('type') == "checkbox" ){
-				if(checkboxes[i].checked == 0){
-					return false;
-				}
-			}
-		}
-		return true;
-	}
-	
-</script>
